Fix bg size on mobile

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   box-sizing: border-box;
   background-image: url('./images/Footer.png');
-  background-size: 100%;
+  background-size: 100% 100%;
   margin: 16px;
   border-radius: 10px;
 }
