--- a/src/Intro.css
+++ b/src/Intro.css
@@ -1,6 +1,6 @@
 .intro-wrapper {
   background-image:  url('./images/1.png');
-  background-size: 100%;
+  background-size: 100% 100%;
   border-radius: 10px;
   margin: 16px;
 }
